# cel-shading-bevy

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml
assets/shaders/: cel.frag  cel.vert
src/: main.rs
src/shaders/: cel.frag
