[package]
name = "cel_shading"
description = "Some testing with creating a cel shader in Bevy"
version = "0.1.0"
edition = "2021"
readme = "README.md"
keywords = ["gamedev"]
categories = ["games"]

[dependencies]
anyhow = "1.0"
bevy = "0.5"
bevy_egui = "0.7"
bevy_obj = "0.5.1"
log = "0.4"
log4rs = "1.0"
nalgebra = "0.29"
rand = "0.8.4"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
